<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/curved_top_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/pick_photo_from"
                    android:textColor="#282f39"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp" />



                <Button
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:text="@string/from_camera"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:id="@+id/camera"
                    android:background="@drawable/corner_radius_5"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_height="wrap_content"/>


                <Button
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:text="@string/from_gallery"
                    android:textStyle="bold"
                    android:id="@+id/gallery"
                    android:textColor="@color/text_color_dark_grey"
                    android:background="@drawable/dark_grey_bg"
                    android:layout_height="wrap_content"/>




            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>